--- a/index.html
+++ b/index.html
@@ -35,15 +35,22 @@
     <main>
         <div class="generalMain">
             <div class="row justify-content-around general">
-                <div class="col-lg-7 col-xl-7 col-xxl-7 col-md-7 left">
-                    <h3>Contact</h3>
-                    <div class="imgAndTextPart row justify-content-around">
-                       <h4>Name</h4>
-                       <input type="text" placeholder="Jhon Smith">
-                       <h4>Email</h4>
-                       <input type="text" placeholder="Email">
-                       <h4>Message</h4>
-                      <textarea name="" id="" cols="30" rows="10"></textarea>
+                <div class="col-lg-8 col-xl-8 col-xxl-8 col-md-8 left">
+                    <h3>About Me</h3>
+                    <div class="imgAndTextPart">
+                        <div class="row">
+                            <div class="col-lg-4 col-xl-4 col-xxl-4 col-md-4 col-sm-4 col-4">
+                                <img src="assets/images/download.png" alt="">
+                            </div>
+                            <div class="col-lg-8 col-xl-8 col-xxl-8 col-md-8 col-sm-8 col-8">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nostrum assumenda iure quisquam eveniet pariatur, nemo tempore culpa consectetur itaque.  
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nostrum assumenda iure quisquam eveniet pariatur, nemo tempore culpa consectetur itaque.</p>   
+                                
+                        </div>
+
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nostrum assumenda iure quisquam eveniet pariatur, nemo tempore culpa consectetur itaque.  
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nostrum assumenda iure quisquam eveniet pariatur, nemo tempore culpa consectetur itaque.</p>  
                     </div>
                 </div>
                 <div class="col-lg-3 col-xl-3 col-xxl-3 col-md-3 right">
