--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                 <div class="col-lg-9 col-xl-9 col-xxl-9 col-9 col-sm-9 col-md-9 text-end right">
                     <ul>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="index.html">About</a>
                         </li>
                         <li>
                             <a href="portfolio.html">Portfolio</a>
